--- a/texfilelthcb/homework/baitap2/main.tex
+++ b/texfilelthcb/homework/baitap2/main.tex
@@ -1,4 +1,4 @@
-\documentclass{report}
+\documentclass{article}
 \usepackage[utf8]{vietnam}
 \usepackage[utf8]{inputenc}
 \usepackage{anyfontsize,fontsize}
@@ -63,62 +63,89 @@
 
 \begin{document}
 \setlength{\parindent}{20pt}
-\newpage
+
 \author{TRẦN KHÔI NGUYÊN \\ VẬT LÝ LÝ THUYẾT}
 \maketitle
 
 Chứng minh $\displaystyle\sum_{s=1}^{2} v_{\vec{k}}^{(s)} \bar{v}_{k}^{(s)} = -\slashed{k} + m $
 \begin{align*}
-	RHS 
-	&= \sqrt{E_{\vec{k}} + m } 
+	RHS
+	 & = \sqrt{E_{\vec{k}} + m }
 	\begin{pmatrix}
 		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(s)} \\
 		\chi^{(s)}
 	\end{pmatrix}
 	\sqrt{E_{\vec{k}} + m }
 	\begin{pmatrix}
-		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)^{\dagger} } &\chi^{(r)^{\dagger} } 
-	\end{pmatrix}\gamma^0 \\
-	&= 	(E_{\vec{k}} + m)
+		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)^{\dagger} } & \chi^{(r)^{\dagger} }
+	\end{pmatrix}\gamma^0                                                                                                                                                                                                          \\
+	 & = 	(E_{\vec{k}} + m)
 	\begin{pmatrix}
 		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(s)} \\
 		\chi^{(s)}
 	\end{pmatrix}
 	\begin{pmatrix}
-		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)^{\dagger} } &-\chi^{(r)^{\dagger} } 
-	\end{pmatrix} \\
-	&=(E_{\vec{k}} + m)
+		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)^{\dagger} } & -\chi^{(r)^{\dagger} }
+	\end{pmatrix}                                                                                                                                                                                                       \\
+	 & =(E_{\vec{k}} + m)
 	\begin{pmatrix}
 		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(s)} \frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)^{\dagger} } & - \frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(s)}\chi^{(r)^{\dagger} } \\
-		\chi^{(s)} \frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)^{\dagger} } & -\chi^{(s)}\chi^{(r)^{\dagger}}
-	\end{pmatrix}\\
-	&=(E_{\vec{k}} + m)
+		\chi^{(s)} \frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)^{\dagger} }                                              & -\chi^{(s)}\chi^{(r)^{\dagger}}
+	\end{pmatrix} \\
+	 & =(E_{\vec{k}} + m)
 	\begin{pmatrix}
-		 \frac{k^2}{(E_{\vec{k}} + m)^2 } \mathbb{1}_{2\times2}\delta_{s,r} & - \frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m} \mathbb{1}_{2\times2}\delta_{s,r} \\
-		 \frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m}\mathbb{1}_{2\times2}\delta_{s,r} & -\mathbb{1}_{2\times2}\delta_{s,r}
-	\end{pmatrix}\\
-	&=
+		\frac{k^2}{(E_{\vec{k}} + m)^2 } \mathbb{1}_{2\times2}\delta_{s,r}           & - \frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m} \mathbb{1}_{2\times2}\delta_{s,r} \\
+		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m}\mathbb{1}_{2\times2}\delta_{s,r} & -\mathbb{1}_{2\times2}\delta_{s,r}
+	\end{pmatrix}                                                                                                                                                                           \\
+	 & =
 	\begin{pmatrix}
-	\frac{k^2}{E_{\vec{k}} + m} & -\vec{k}\vec{\sigma} \\
-		\vec{k}\vec{\sigma} & -E_{\vec{k}} - m
+		\frac{k^2}{E_{\vec{k}} + m} & -\vec{k}\vec{\sigma} \\
+		\vec{k}\vec{\sigma}         & -E_{\vec{k}} - m
 	\end{pmatrix}
-	\otimes \mathbb{1}_{2\times2}\\
-	& = E_{\vec{k}} 
+	\otimes \mathbb{1}_{2\times2}                                                                                                                                                                                                                                                                                                                                                                          \\
+	 & = E_{\vec{k}}
 	\begin{pmatrix}
-		1 & 0\\
+		1 & 0  \\
 		0 & -1
-	\end{pmatrix} \otimes \mathbb{1}_{2\times2} 
+	\end{pmatrix} \otimes \mathbb{1}_{2\times2}
 	- m\begin{pmatrix}
-		1 & 0\\
-		0 & 1
-	\end{pmatrix} \otimes \mathbb{1}_{2\times2}  
+		   1 & 0 \\
+		   0 & 1
+	   \end{pmatrix} \otimes \mathbb{1}_{2\times2}
 	+ \vec{k} \begin{pmatrix}
-		0 & -\vec{\sigma}\\
-		\vec{\sigma} & 0
-	\end{pmatrix}\otimes \mathbb{1}_{2\times2}\\
-	& = E_{\vec{k}} \gamma^0 - \vec{k}\vec{\gamma} - m \\
-	& = \slashed{k} - m
+		          0            & -\vec{\sigma} \\
+		          \vec{\sigma} & 0
+	          \end{pmatrix}\otimes \mathbb{1}_{2\times2}                                                                                                                                                                                                                                                                                                                                                   \\
+	 & = E_{\vec{k}} \gamma^0 - \vec{k}\vec{\gamma} - m                                                                                                                                                                                                                                                                                                                                                    \\
+	 & = \slashed{k} - m
 \end{align*}
-	
-	
+
+Chứng minh $\bar{v}_{k}^{(s)} v^{(r)}_{k} = -2m\delta_{s,r} $
+\begin{align*}
+	RHS 
+	& =
+	\sqrt{E_{\vec{k}} + m }
+	\begin{pmatrix}
+		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(s)^{\dagger} } & \chi^{(s)^{\dagger} }
+	\end{pmatrix}\gamma^0
+	\sqrt{E_{\vec{k}} + m }
+	\begin{pmatrix}
+		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)} \\
+		\chi^{(r)}
+	\end{pmatrix}\\
+	&= (E_{\vec{k}}+m)
+	\begin{pmatrix}
+		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(s)^{\dagger} } & -\chi^{(s)^{\dagger} }
+	\end{pmatrix}
+	\begin{pmatrix}
+		\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)} \\
+		\chi^{(r)}
+	\end{pmatrix}\\
+	& = (E_{\vec{k}}+m)
+		\left[\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(s)^{\dagger}}\frac{\vec{k}\vec{\sigma}}{E_{\vec{k}} + m } \chi^{(r)} -\chi^{(s)^{\dagger}} \chi^{(r)}\right] \\
+	& = \left[ \frac{k^2}{E_{\vec{k}} + m}\delta_{s,r} - (E_{\vec{k}} + m)\delta_{s,r}\right] \\
+	& = \left[ (E_{\vec{k}} - m)\delta_{s,r} - (E_{\vec{k}} + m)\delta_{s,r}\right] \\
+	& = -2m \delta_{s,r} (\text{ĐPCM}) \\
+\end{align*}
+
 \end{document}
