update bai tap pdf

--- a/texfilelthcb/homework/baitap2/main.tex
+++ b/texfilelthcb/homework/baitap2/main.tex
@@ -148,4 +148,7 @@ Chứng minh $\bar{v}_{k}^{(s)} v^{(r)}_{k} = -2m\delta_{s,r} $
 	& = -2m \delta_{s,r} (\text{ĐPCM}) \\
 \end{align*}
 
+$\displaystyle\dv[n]{f}{x}$
+$\dfrac{df}{dx}$
+
 \end{document}
