--- a/texfilelthcb/homework/baitap4/main.tex
+++ b/texfilelthcb/homework/baitap4/main.tex
@@ -110,8 +110,8 @@
 			&=-\frac{1}{4}F_{\mu\nu}^AF^{A,\mu\nu}.\\
 		\end{split}
 	\end{equation}
-	mà ta thấy rằng $TrF_{\mu\nu}F^{\mu\nu}$ bất biến dưới phép biến đổi trên $F_{\mu\nu}'=S_GF_{\mu\nu}S_G^\dagger$, nên $-\frac{1}{4}F_{\mu\nu}^AF^{A,\mu\nu}$ bất biến gauge.
-	\textbf{Đi tìm dạng của $F_{\mu\nu}$}
+	mà ta thấy rằng $TrF_{\mu\nu}F^{\mu\nu}$ bất biến dưới phép biến đổi trên $F_{\mu\nu}'=S_GF_{\mu\nu}S_G^\dagger$, nên $-\frac{1}{4}F_{\mu\nu}^AF^{A,\mu\nu}$ bất biến gauge.\\
+	\textbf{Đi tìm dạng của $F_{\mu\nu}$}\\
 	Ta khai triển:
 	\begin{equation}
 		\begin{split}
@@ -158,7 +158,7 @@
 		\item $\bar{\Psi}\rightarrow\bar{\Psi}'=\bar{\Psi}S_G^\dagger$
 		\item $G_\mu\rightarrow G_\mu'=S_GG_\mu S_G^\dagger-\frac{\textbf{i}}{\textbf{g}}(\partial_\mu S_G)S_G^\dagger$
 		\item $\left[\gamma^\mu,S_G\right]=\left[\gamma^\mu,S_G^\dagger\right]=0$
-		\item $S_G^\dagger S_G=\mathcal{I}$ (có vẻ hiển nhiên)
+		\item $S_G^\dagger S_G=\mathbb{I}$ (có vẻ hiển nhiên)
 	\end{itemize}
 	Ta xét lại Lagrangian:
 	$\mathcal{L}=\bar{\Psi}(i\gamma^\mu\partial_\mu-m)\Psi$\\
@@ -198,3 +198,4 @@
 	\end{align*}
 	Như vậy, ta đã xây dựng $$\mathcal{L}_{int}=g\bar{\Psi}\gamma^\mu G_\mu \Psi$$
 \end{document}
+
